# blipmq

./: .gitignore  BENCHMARK_RESULTS.md  Cargo.toml  Dockerfile  Dockerfile.optimized  FINAL_BENCHMARK_REPORT.md  PERFORMANCE.md  PERFORMANCE_COMPARISON_BlipMQ_vs_NATS.md  PERFORMANCE_IMPROVEMENTS.md  PERFORMANCE_REPORT.md  PRODUCTION_IMPLEMENTATION.md  PRODUCTION_OPTIMIZATIONS.md  PRODUCTION_ROADMAP.md  PROD_READINESS.md  README_PRODUCTION.md  RELEASE_NOTES_v1.0.md  WARP.md  bench_config.toml  benchmark_production.py  blipmq.example.toml  blipmq.toml  build.rs  docker-compose.production.yml  production.toml  readme.md  run_benchmark.ps1
.github/workflows/: ci.yml  release.yml  rust.yml
auth/: Cargo.toml
auth/src/: lib.rs
bench/: Cargo.toml
bench/src/: main.rs
bench_compare/: Cargo.toml  README.md
bench_compare/results/: blipmq-bench.toml
bench_compare/scripts/: plot.py  run_all.sh
bench_compare/src/: lib.rs  main.rs
benches/: broker_comparison.rs  nats_benchmark.rs  network_benchmark.rs  performance_tests.rs  production_benchmark.rs  realworld_benchmark.rs  timer_wheel_benchmark.rs  ultra_performance_benchmark.rs
blipmq_auth/: Cargo.toml
blipmq_bench/: Cargo.toml
blipmq_bench/src/: main.rs
blipmq_chaos/: Cargo.toml
blipmq_chaos/src/: lib.rs
blipmq_config/: Cargo.toml
blipmq_config/src/: lib.rs
blipmq_core/: Cargo.toml
blipmq_core/src/: lib.rs
blipmq_metrics/: Cargo.toml
blipmq_metrics/src/: lib.rs
blipmq_net/: Cargo.toml
blipmq_net/src/: connection.rs  frame.rs  lib.rs  server.rs
blipmq_wal/: Cargo.toml
blipmq_wal/src/: lib.rs
blipmqd/: Cargo.toml
blipmqd/src/: main.rs
chaos/: Cargo.toml
config/: Cargo.toml  blipmq-dev.toml  blipmq-production.toml  blipmq-ultra.toml
config-profiles/: high-throughput.toml  low-latency.toml  resource-efficient.toml
core/: Cargo.toml
core/src/: lib.rs
docs/: ARCHITECTURE.md  CONFIG.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  OPERATIONS.md  OVERVIEW.md  PERFORMANCE.md  PROTOCOL.md  RECOVERY.md  SECURITY.md  USAGE_EXAMPLES.md
examples/: iot_sensor_aggregation.rs  microservices_events.rs  perf_client.rs  performance_demo.rs  test_iocp.rs
metrics/: Cargo.toml
metrics/src/: lib.rs
monitoring/: blipmq_alerts.yml  prometheus.yml
net/: Cargo.toml
net/src/: connection.rs  error.rs  server.rs
scripts/: bench-all-fanout.ps1  bench-blipmq.ps1  bench-kafka-fanout.ps1  bench-kafka.ps1  bench-mqtt-e2e.ps1  bench-mqtt-fanout.ps1  bench-mqtt.ps1  bench-nats-e2e.ps1  bench-nats-fanout.ps1  bench-nats.ps1  benchmark-framework.ps1  benchmark_runner.sh  mqtt_gen.awk  run-e2e-benchmarks.ps1
src/: lib.rs  main.rs
src/api/: admin.rs  health.rs  metrics.rs  mod.rs  rest.rs
src/api/handlers/: metrics.rs  mod.rs
src/broker/: client.rs  mod.rs  server.rs
src/broker/engine/: mod.rs  optimized_server.rs  server.rs
src/config/: mod.rs
src/core/: advanced_config.rs  auth.rs  batch_processor.rs  command.rs  connection_manager.rs  delivery_mode.rs  dlq.rs  error.rs  graceful_shutdown.rs  lockfree.rs  memory_pool.rs  message.rs  mod.rs  monitoring.rs  performance.rs  protocol.rs  qos.rs  queue.rs  queue_manager.rs  timer_wheel.rs  vectored_io.rs  wal.rs
src/core/fbs/: blipmq.fbs
src/core/proto/: command.proto  message.proto
src/core/publisher/: mod.rs  publisher.rs
src/core/queue/: manager.rs  mod.rs  qos0.rs
src/core/subscriber/: mod.rs  subscriber.rs
src/core/topics/: mod.rs  registry.rs  topic.rs
src/logging/: mod.rs
src/metrics/: mod.rs
src/util/: affinity.rs  backoff.rs  mod.rs
src/v2/: delivery.rs  fast_io.rs  iocp_impl.rs  mempool.rs  metrics.rs  mod.rs  network.rs  protocol.rs  routing.rs  server.rs  simd.rs  simple_ultra_server.rs  ultra_server.rs
tests/: chaos_recovery.rs  common.rs  config_load.rs  daemon_integration.rs  fanout_scale.rs  overflow_volume.rs  qos0_pubsub.rs  qos_pub_sub.rs  queue_overflow.rs  stress_qos0_ordered.rs  stress_qos0_scale_unordered.rs  timed_flush.rs  topic_fanout.rs  ttl_drop.rs  writer_channel.rs
wal/: Cargo.toml
wal/src/: lib.rs
