[package]
name = "blipmq"
version = "1.0.0"
edition = "2021"
authors = ["Ashutosh Kumar <kumarashutosh34169@gmail.com>"]
description = "Ultra-lightweight, durable, high-throughput message queue written in Rust."
license = "BSD-3-Clause"
repository = "https://github.com/bravo1goingdark/blipmq"
default-run = "blipmq"
build = "build.rs"

# ───────────────────────────────────────────────────────────
# Library target ─ makes `blipmq::` usable everywhere
# ───────────────────────────────────────────────────────────
[lib]
name = "blipmq"          # must match the crate name used in `use blipmq::…`
path = "src/lib.rs"

# ───────────────────────────────────────────────────────────
# Binaries
# ───────────────────────────────────────────────────────────
# Main broker daemon
[[bin]]
name = "blipmq"          # `cargo run --bin blipmq`
path = "src/bin/blipmq.rs"

# CLI (pub / sub / unsub)
[[bin]]
name = "blipmq-cli"      # `cargo run --bin blipmq-cli -- …`
path = "src/bin/blipmq-cli.rs"



[[bench]]
name = "network_benchmark"
harness = false
path = "benches/network_benchmark.rs"


# ───────────────────────────────────────────────────────────
# Dependencies
# ───────────────────────────────────────────────────────────
[dependencies]
tokio = { version = "1.38", features = ["net", "io-util", "io-std", "fs", "rt-multi-thread", "macros", "sync", "time"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std", "time"] }
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.9.2"
 anyhow = "1.0"
 dashmap = "6.1.0"
 clap = { version = "4.5", features = ["derive"] }
 rustyline = "17.0.1"
 bytes = "1.10.1"
 log = "0.4.27"
 crossbeam-queue = "0.3.12"
 flume = "0.11.1"
 once_cell = "1.21.3"
 futures = "0.3.31"
 flatbuffers = "25.2.10"
 tracing-appender = "0.2.3"
 ahash = "0.8"

 # Optional performance features
 mimalloc = { version = "0.1", optional = true }
 windows-sys = { version = "0.59.0", optional = true, features = ["Win32_System_Threading"] }

[profile.bench]
debug = true

[build-dependencies]
flatbuffers-build = { version = "0.2.2", features = ["vendored"] }

[dev-dependencies]
criterion = "0.7.0"
nats = "0.25.0"
hdrhistogram = "7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[features]
# Pin runtime threads or long-lived workers to CPU cores (Windows only implementation)
affinity = ["windows-sys"]
# Use mimalloc as global allocator
mimalloc = ["dep:mimalloc"]
