[workspace]
members = [
    "blipmqd",
    "blipmq_core",
    "blipmq_net",
    "blipmq_wal",
    "blipmq_auth",
    "blipmq_metrics",
    "blipmq_config",
    "blipmq_bench",
    "blipmq_chaos",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["BlipMQ Architects"]
description = "BlipMQ - a lightweight, ultra-fast message broker with a custom TCP protocol."
license = "MIT OR Apache-2.0"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "io-util", "sync", "fs", "signal"] }
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
console-subscriber = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "1"
hyper = { version = "0.14", features = ["full"] }
async-trait = "0.1"
crc32fast = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
