[package]
name = "bench"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "BlipMQ in-process performance harness"
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
corelib = { path = "../core", package = "core" }
wal = { path = "../wal" }
net = { path = "../net" }
auth = { path = "../auth" }

