[package]
name = "bench_compare"
version = "0.1.0"
edition = "2021"
default-run = "bench_compare"

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
csv = "1"
clap = { workspace = true, features = ["derive"] }
nats = "0.24"
sysinfo = "0.30"
net = { path = "../net" }
futures = "0.3"

