[package]
name = "blipmq_bench"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "BlipMQ in-process performance harness"
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
blipmq_core = { path = "../blipmq_core" }
blipmq_wal = { path = "../blipmq_wal" }
blipmq_net = { path = "../blipmq_net" }
blipmq_auth = { path = "../blipmq_auth" }
