[package]
name = "blipmq_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "BlipMQ core broker logic: topics, queues, QoS"
license.workspace = true

[dependencies]
tracing = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
blipmq_wal = { path = "../blipmq_wal" }
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
