[package]
name = "blipmq_metrics"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "BlipMQ metrics HTTP endpoint"
license.workspace = true

[dependencies]
hyper = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
blipmq_core = { path = "../blipmq_core" }
blipmq_wal = { path = "../blipmq_wal" }
