[package]
name = "blipmq_wal"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "BlipMQ write-ahead log"
license.workspace = true

[dependencies]
bytes = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
crc32fast = { workspace = true }
